# trade-ssm

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  TECHNICAL_DEBT.md  deny.toml  docker-compose.yml  justfile
.cargo/: audit.toml  config.toml
.claude/: settings.json
.claude/agents/ci-watcher/: AGENT.md
.claude/agents/rust-reviewer/: AGENT.md
.claude/commands/: dev.md  feat.md  hotfix.md  pr.md  precommit.md  release.md  test.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-docker.yml  pr.yml  release.yml
config/: default.toml  nats-server.conf  rl-default.toml
crates/ssm-ai/: Cargo.toml
crates/ssm-ai/src/: config.rs  continuous_env.rs  correlated_features.rs  edge.rs  env.rs  episode_sampler.rs  features.rs  hyperopt.rs  lib.rs  metrics.rs  model.rs  model_manager.rs  multi_feature.rs  multi_timeframe.rs  normalize.rs  optimizer.rs  outlier.rs  ppo.rs  replay_buffer.rs  reward.rs  trainer.rs  vectorized_env.rs
crates/ssm-core/: Cargo.toml
crates/ssm-core/src/: config.rs  lib.rs  logging.rs  metrics.rs  types.rs
crates/ssm-engine/: Cargo.toml
crates/ssm-engine/benches/: engine_bench.rs
crates/ssm-engine/src/: controller.rs  core.rs  gate.rs  lib.rs  seqlock.rs  spsc.rs  types.rs
crates/ssm-exchange/: Cargo.toml
crates/ssm-exchange/src/: aggregator.rs  binance.rs  bybit.rs  error.rs  exchange_trait.rs  history.rs  lib.rs  pairlist.rs  websocket.rs
crates/ssm-execution/: Cargo.toml
crates/ssm-execution/benches/: backtest.rs
crates/ssm-execution/src/: backtest.rs  engine.rs  error.rs  leverage.rs  lib.rs  live.rs  paper.rs  portfolio.rs  position_tracker.rs  protections.rs  regression.rs  risk.rs  slippage.rs  stoploss.rs
crates/ssm-execution/tests/: proptest_backtest.rs
crates/ssm-indicators/: Cargo.toml
crates/ssm-indicators/benches/: indicators.rs
crates/ssm-indicators/src/: atr.rs  bollinger.rs  cvd.rs  ema.rs  funding.rs  lib.rs  liquidations.rs  macd.rs  obv.rs  plot.rs  rsi.rs  vwap.rs
crates/ssm-indicators/tests/: proptest_cvd.rs
crates/ssm-nats/: Cargo.toml
crates/ssm-nats/src/: lib.rs  producer_consumer.rs  publisher.rs  subscriber.rs  topics.rs
crates/ssm-notify/: Cargo.toml
crates/ssm-notify/src/: filter.rs  lib.rs  telegram.rs  telegram_bot.rs  webhook.rs
crates/ssm-orderflow/: Cargo.toml
crates/ssm-orderflow/src/: absorption.rs  delta.rs  footprint.rs  imbalance.rs  lib.rs  market_profile.rs  sweep.rs
crates/ssm-store/: Cargo.toml
crates/ssm-store/migrations/: V001__initial_schema.sql  V002__add_audit_log.sql  V003__add_dead_letters.sql
crates/ssm-store/src/: analytics.rs  lib.rs  migrations.rs  schema.rs  store.rs
crates/ssm-strategy/: Cargo.toml
crates/ssm-strategy/src/: ai_strategy.rs  composite.rs  cvd_momentum.rs  error.rs  lib.rs  orderflow_strategy.rs  traits.rs
docs/: freqtrade-gap-analysis.md
k8s/: api.yaml  configmap.yaml  data-feed.yaml  execution.yaml  kustomization.yaml  namespace.yaml  nats.yaml  secrets.yaml  signal.yaml
services/analyzer/: Cargo.toml
services/analyzer/src/: main.rs
services/api/: Cargo.toml
services/api/src/: main.rs
services/backtest/: Cargo.toml
services/backtest/src/: main.rs
services/cli/: Cargo.toml
services/cli/src/: main.rs
services/data-feed/: Cargo.toml
services/data-feed/src/: main.rs
services/download-data/: Cargo.toml
services/download-data/src/: main.rs
services/execution/: Cargo.toml
services/execution/src/: main.rs
services/rl-backtest/: Cargo.toml
services/rl-backtest/src/: main.rs
services/rl-trainer/: Cargo.toml
services/rl-trainer/src/: main.rs
services/signal/: Cargo.toml
services/signal/src/: main.rs
src/: main.rs
src/exchange/: binance.rs  types.rs
src/indicators/: cvd.rs  liquidations.rs
src/signals/: telegram.rs
test_data/: BTCUSDT-15m-test.json
