[workspace]
resolver = "2"
members = [
    "crates/ssm-core",
    "crates/ssm-exchange",
    "crates/ssm-indicators",
    "crates/ssm-notify",
    "crates/ssm-execution",
    "crates/ssm-strategy",
    "crates/ssm-ai",
    "services/analyzer",
    "services/download-data",
    "services/backtest",
    "services/rl-backtest",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Shared across crates — single version source of truth
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
ssm-core = { path = "crates/ssm-core" }
ssm-exchange = { path = "crates/ssm-exchange" }
ssm-indicators = { path = "crates/ssm-indicators" }
ssm-notify = { path = "crates/ssm-notify" }
ssm-execution = { path = "crates/ssm-execution" }
ssm-strategy = { path = "crates/ssm-strategy" }
ssm-ai = { path = "crates/ssm-ai" }
