[workspace]
resolver = "2"
members = [
    "crates/ssm-core",
    "crates/ssm-exchange",
    "crates/ssm-indicators",
    "crates/ssm-notify",
    "crates/ssm-execution",
    "crates/ssm-strategy",
    "crates/ssm-ai",
    "services/analyzer",
    "services/download-data",
    "services/backtest",
    "services/rl-backtest",
    "crates/ssm-nats",
    "crates/ssm-orderflow",
    "services/data-feed",
    "services/signal",
    "services/execution",
    "services/rl-trainer",
    "services/api",
    "services/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Shared across crates — single version source of truth
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
async-nats = "0.38"
url = "2"
regex = "1"
async-trait = "0.1"
rand = "0.8"
rayon = "1"
hmac = "0.12"
sha2 = "0.10"

# Internal crates
ssm-core = { path = "crates/ssm-core" }
ssm-exchange = { path = "crates/ssm-exchange" }
ssm-indicators = { path = "crates/ssm-indicators" }
ssm-notify = { path = "crates/ssm-notify" }
ssm-execution = { path = "crates/ssm-execution" }
ssm-strategy = { path = "crates/ssm-strategy" }
ssm-ai = { path = "crates/ssm-ai" }
ssm-nats = { path = "crates/ssm-nats" }
ssm-orderflow = { path = "crates/ssm-orderflow" }
