[package]
name = "ssm-engine"
description = "Per-core risk-sharded trading engine"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ssm-core = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false
