[package]
name = "ssm-indicators"
description = "Trading indicators for trade-ssm (CVD, liquidation analysis)"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "indicators"
harness = false
