[package]
name = "ssm-nats"
description = "NATS pub/sub messaging for trade-ssm microservices"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
rust_decimal = { workspace = true }
