[package]
name = "ssm-store"
description = "SQLite persistence layer for trade-ssm: positions, orders, trades, signals"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
