[package]
name = "analyzer"
description = "trade-ssm analyzer service — polls exchange data, computes indicators, sends Telegram alerts"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
ssm-exchange = { workspace = true }
ssm-indicators = { workspace = true }
ssm-notify = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
