[package]
name = "api-service"
description = "REST API for trade-ssm bot control and monitoring"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-service"
path = "src/main.rs"

[dependencies]
ssm-core = { workspace = true }
ssm-execution = { workspace = true }
ssm-nats = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
