[package]
name = "api-service"
description = "REST API for trade-ssm bot control and monitoring"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-service"
path = "src/main.rs"

[dependencies]
ssm-core = { workspace = true }
ssm-execution = { workspace = true }
ssm-nats = { workspace = true }
ssm-store = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
chrono = { workspace = true }
validator = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
governor = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
