[package]
name = "trade-ssm-cli"
description = "CLI utility commands for trade-ssm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trade-ssm"
path = "src/main.rs"

[dependencies]
ssm-core = { workspace = true }
ssm-exchange = { workspace = true }
ssm-indicators = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
