[package]
name = "data-feed"
description = "Real-time WebSocket data feed service — publishes trades, candles, liquidations to NATS"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
ssm-exchange = { workspace = true }
ssm-nats = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
