[package]
name = "download-data"
description = "Fetch and persist historical candle data from Binance futures"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
ssm-exchange = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
