[package]
name = "execution-service"
description = "Order execution and position management service"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
ssm-nats = { workspace = true }
ssm-execution = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
