[package]
name = "rl-backtest"
description = "RL environment backtest: run episodes, optimize hyperparams, compare to buy-and-hold"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
ssm-exchange = { workspace = true }
ssm-indicators = { workspace = true }
ssm-ai = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
