[package]
name = "rl-trainer"
description = "RL model training service with walk-forward retraining"
version.workspace = true
edition.workspace = true

[dependencies]
ssm-core = { workspace = true }
ssm-nats = { workspace = true }
ssm-ai = { workspace = true }
ssm-exchange = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
